add extra comments

--- a/2025/day_09.ipynb
+++ b/2025/day_09.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 11,
    "id": "12332e35",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 12,
    "id": "3cee1987",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 13,
    "id": "3d4d4023",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 14,
    "id": "e108cbd9",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 15,
    "id": "1ae9eebf",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 16,
    "id": "8a39bc1c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 17,
    "id": "fdacc08a",
    "metadata": {},
    "outputs": [],
@@ -213,9 +213,10 @@
     "        \n",
     "        if y1 == y2:\n",
     "            continue\n",
-    "        \n",
-    "        if (y1 < y < y2) or (y1 > y > y2):\n",
-    "            intersections += 1\n",
+    "\n",
+    "        if y1 < y < y2 or y1 > y > y2:\n",
+    "            if x <= x1:\n",
+    "                intersections += 1\n",
     "\n",
     "    return intersections % 2 == 1"
    ]
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 18,
    "id": "7b033be7",
    "metadata": {},
    "outputs": [],
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 19,
    "id": "4a53ed61",
    "metadata": {},
    "outputs": [
@@ -304,12 +305,14 @@
    "id": "9f472d11",
    "metadata": {},
    "source": [
-    "Another attempt, compacting the coordinates and then brute-forcing it. This works again for the test input, but not for the actual input. I'm beginning to suspect that the issue is with the `is_inside` function..."
+    "Another attempt, compacting the coordinates and then brute-forcing it. This works again for the test input, but not for the actual input. ~~I'm beginning to suspect that the issue is with the `is_inside` function...~~ I've been working on it some more, and I think I know the problem, but I don't know how to fix it:\n",
+    "\n",
+    "The `is_inside` function should yield `True` if the ray cast to the right goes through an odd number of sides, and `False` if it goes through an even number of sides. The issue is that the edge cases └┐ and └┘ provide the same result (even number of intersections) although the first one should be odd. Anyway, I haven't found a way to fix this issue (yet?), as I would need to take into account multiple lines at once."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 20,
    "id": "edde9e06",
    "metadata": {},
    "outputs": [
@@ -317,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest area of a rectangle using only green and red tiles is 4740155680. (not correct)\n"
+      "The largest area of a rectangle using only green and red tiles is 181352920. (not correct)\n"
      ]
     }
    ],
