final unsuccessful attempt for day 9 part 2

--- a/2025/day_09.ipynb
+++ b/2025/day_09.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 655,
    "id": "12332e35",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 656,
    "id": "3cee1987",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 657,
    "id": "3d4d4023",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 658,
    "id": "e108cbd9",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 659,
    "id": "1ae9eebf",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 660,
    "id": "8a39bc1c",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 661,
    "id": "fdacc08a",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 662,
    "id": "7b033be7",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 663,
    "id": "4a53ed61",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 664,
    "id": "edde9e06",
    "metadata": {},
    "outputs": [
@@ -351,6 +351,112 @@
     "    if this_square:\n",
     "        print(f\"The largest area of a rectangle using only green and red tiles is {area}. (not correct)\")\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ee51fff",
+   "metadata": {},
+   "source": [
+    "Final attempt, flood fill. I expected this to work, but it doesn't either."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 665,
+   "id": "f7e312f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flood_fill(inside, start_x, start_y):\n",
+    "    stack = [(start_x, start_y)]\n",
+    "    while stack:\n",
+    "        x, y = stack.pop()\n",
+    "        if (x, y) in inside:\n",
+    "            continue\n",
+    "        inside.add((x, y))\n",
+    "        stack.append((x + 1, y))\n",
+    "        stack.append((x - 1, y))\n",
+    "        stack.append((x, y + 1))\n",
+    "        stack.append((x, y - 1))\n",
+    "        if len(stack) > 1000000:\n",
+    "            raise MemoryError(\"Starting point is outside the polygon.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 666,
+   "id": "74309820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def line_to_points(line):\n",
+    "    (x1, y1), (x2, y2) = line\n",
+    "    if x1 == x2:\n",
+    "        return [(x1, y) for y in range(min(y1, y2), max(y1, y2) + 1)]\n",
+    "    elif y1 == y2:\n",
+    "        return [(x, y1) for x in range(min(x1, x2), max(x1, x2) + 1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 667,
+   "id": "d4a9a8e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest area of a rectangle using only green and red tiles is 1543467432. (not correct)\n"
+     ]
+    }
+   ],
+   "source": [
+    "red_tiles_compacted = [(i, x, y) for i, (x, y) in enumerate(red_tiles)]\n",
+    "red_tiles_compacted = sorted(red_tiles_compacted, key=lambda x: x[1])\n",
+    "lookup_x = sorted(list(set([x for _, x, _ in red_tiles_compacted])))\n",
+    "red_tiles_compacted = sorted(red_tiles_compacted, key=lambda x: x[2])\n",
+    "lookup_y = sorted(list(set([y for _, _, y in red_tiles_compacted])))\n",
+    "\n",
+    "squares_compacted = [(area, (lookup_x.index(tile1[0]), lookup_y.index(tile1[1])), (lookup_x.index(tile2[0]), lookup_y.index(tile2[1]))) for area, tile1, tile2 in squares]\n",
+    "\n",
+    "lines_compacted = [((lookup_x.index(x1), lookup_y.index(y1)), (lookup_x.index(x2), lookup_y.index(y2))) for (x1, y1), (x2, y2) in lines]\n",
+    "\n",
+    "polygon = []\n",
+    "for line in lines_compacted:\n",
+    "    polygon += line_to_points(line)\n",
+    "polygon = set(polygon)\n",
+    "\n",
+    "\n",
+    "max_value = max(polygon, key=lambda x: x[0])[0]\n",
+    "\n",
+    "flood_fill(polygon, int(max_value / 2), int(max_value / 4))\n",
+    "\n",
+    "for area, p1, p2 in squares_compacted:\n",
+    "    x_vals = [p1[0], p2[0]]\n",
+    "    y_vals = [p1[1], p2[1]]\n",
+    "    \n",
+    "    this_square = True\n",
+    "    for x in range(min(x_vals), max(x_vals) + 1):\n",
+    "        for y in range(min(y_vals), max(y_vals) + 1):\n",
+    "            if (x, y) not in polygon:\n",
+    "                this_square = False\n",
+    "                break\n",
+    "        if not this_square:\n",
+    "            break\n",
+    "    \n",
+    "    if this_square:\n",
+    "        print(f\"The largest area of a rectangle using only green and red tiles is {area}. (not correct)\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "209017fd",
+   "metadata": {},
+   "source": [
+    "This Jupyter Notebook is proof of my descent to madness with this puzzle. You win."
    ]
   }
  ],
