--- a/2025/day_09.ipynb
+++ b/2025/day_09.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 205,
    "id": "12332e35",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 206,
    "id": "3cee1987",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 657,
+   "execution_count": 207,
    "id": "3d4d4023",
    "metadata": {},
    "outputs": [],
@@ -85,12 +85,14 @@
    "id": "e6623727",
    "metadata": {},
    "source": [
-    "This first part is so easy..."
+    "This first part is so easy...\n",
+    "\n",
+    "_Edit from the future: I don't understand why this works, because the calculation of the area is wrong. It should be_ `(abs(x1 - x2) + 1) * (abs(y1 - y2) + 1)` _instead of_ `abs((x1 - x2 + 1) * (y1 - y2 + 1))`. _This was the reason for part 2 to fail, but somehow part 1 had a correct result. I wish it had failed on part 1, then I would have noticed it much earlier._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 658,
+   "execution_count": 208,
    "id": "e108cbd9",
    "metadata": {},
    "outputs": [
@@ -110,7 +112,7 @@
     "            continue\n",
     "        x1, y1 = tile1\n",
     "        x2, y2 = tile2\n",
-    "        new_area = abs((x1 - x2 + 1) * (y1 - y2 + 1))\n",
+    "        new_area = abs((x1 - x2 + 1) * (y1 - y2 + 1))  # This line is wrong, but somehow it works\n",
     "        if new_area > area:\n",
     "            area = new_area\n",
     "print(f\"The largest area of a rectangle is {area}.\")"
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 209,
    "id": "1ae9eebf",
    "metadata": {},
    "outputs": [],
@@ -161,12 +163,14 @@
    "id": "208f0e8b",
    "metadata": {},
    "source": [
-    "Trying a different approach:"
+    "Trying a different approach:\n",
+    "\n",
+    "_Edit from the future: This box of code was preventing me from getting the correct value. Stupid area calculation, that was suposed to be the easy part!_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 660,
+   "execution_count": null,
    "id": "8a39bc1c",
    "metadata": {},
    "outputs": [],
@@ -179,7 +183,7 @@
     "            continue\n",
     "        x1, y1 = tile1\n",
     "        x2, y2 = tile2\n",
-    "        area = abs((x1 - x2 + 1) * (y1 - y2 + 1))\n",
+    "        area = (abs(x1 - x2) + 1) * (abs(y1 - y2) + 1)  # Fixed area calculation\n",
     "        squares.append((area, (x1, y1), (x2, y2)))\n",
     "squares.sort(reverse=True)\n",
     "\n",
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 661,
+   "execution_count": 211,
    "id": "fdacc08a",
    "metadata": {},
    "outputs": [],
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 212,
    "id": "7b033be7",
    "metadata": {},
    "outputs": [],
@@ -262,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 213,
    "id": "4a53ed61",
    "metadata": {},
    "outputs": [
@@ -312,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 214,
    "id": "edde9e06",
    "metadata": {},
    "outputs": [
@@ -320,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest area of a rectangle using only green and red tiles is 181352920. (not correct)\n"
+      "The largest area of a rectangle using only green and red tiles is 181356840. (not correct)\n"
      ]
     }
    ],
@@ -358,12 +362,12 @@
    "id": "7ee51fff",
    "metadata": {},
    "source": [
-    "Final attempt, flood fill. I expected this to work, but it doesn't either."
+    "Final attempt, flood fill. ~~I expected this to work, but it doesn't either.~~\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 215,
    "id": "f7e312f2",
    "metadata": {},
    "outputs": [],
@@ -380,12 +384,12 @@
     "        stack.append((x, y + 1))\n",
     "        stack.append((x, y - 1))\n",
     "        if len(stack) > 1000000:\n",
-    "            raise MemoryError(\"Starting point is outside the polygon.\")"
+    "            raise MemoryError(\"Starting point is outside the polygon.\")  # I know, this is bad. But I wanted to quick way to check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 216,
    "id": "74309820",
    "metadata": {},
    "outputs": [],
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 217,
    "id": "d4a9a8e4",
    "metadata": {},
    "outputs": [
@@ -408,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The largest area of a rectangle using only green and red tiles is 1543467432. (not correct)\n"
+      "The largest area of a rectangle using only green and red tiles is 1543501936.\n"
      ]
     }
    ],
@@ -420,14 +424,12 @@
     "lookup_y = sorted(list(set([y for _, _, y in red_tiles_compacted])))\n",
     "\n",
     "squares_compacted = [(area, (lookup_x.index(tile1[0]), lookup_y.index(tile1[1])), (lookup_x.index(tile2[0]), lookup_y.index(tile2[1]))) for area, tile1, tile2 in squares]\n",
-    "\n",
     "lines_compacted = [((lookup_x.index(x1), lookup_y.index(y1)), (lookup_x.index(x2), lookup_y.index(y2))) for (x1, y1), (x2, y2) in lines]\n",
     "\n",
     "polygon = []\n",
     "for line in lines_compacted:\n",
     "    polygon += line_to_points(line)\n",
     "polygon = set(polygon)\n",
-    "\n",
     "\n",
     "max_value = max(polygon, key=lambda x: x[0])[0]\n",
     "\n",
@@ -447,7 +449,7 @@
     "            break\n",
     "    \n",
     "    if this_square:\n",
-    "        print(f\"The largest area of a rectangle using only green and red tiles is {area}. (not correct)\")\n",
+    "        print(f\"The largest area of a rectangle using only green and red tiles is {area}.\")\n",
     "        break"
    ]
   },
@@ -456,7 +458,9 @@
    "id": "209017fd",
    "metadata": {},
    "source": [
-    "This Jupyter Notebook is proof of my descent to madness with this puzzle. You win."
+    "~~This Jupyter Notebook is proof of my descent to madness with this puzzle. You win.~~\n",
+    "\n",
+    "**I win!!!**"
    ]
   }
  ],
